# NS-Stack

./: CMakeCache.txt  CMakeLists.txt  TEACHER-README  build.sh  bypassKernel  tshark_all_dev.sh  undoBypass  write-tasks.md
checkpoints/: .gitignore  Makefile  echo_client  echo_client.c  echo_server  lab1.show.sh  lab1.typescript  lab2-checkpoints.md  lab2.ckp-3-4.sh  lab2.ckp-5.sh  perf_client  perf_client.c  perf_server  perf_server.c  robust_test_client.cpp  robust_test_server.cpp
src/: CMakeLists.txt  arp.cc  device.c  device.cc  gracefully_shutdown.cc  ip.cc  ip.h  logger.c  logger.cc  packetio.c  packetio.cc  pnx_ip.cc  pnx_socket.cc  pnx_tcp.cc  pnx_tcp_discard.cc  pnx_tcp_tcb.cc  pnx_utils.c  pnx_utils.cc  routing.cc  socket.h  socket_discard.cc
src/includes/: arp.h  common.h  device.h  gracefully_shutdown.h  ip.h  logger.h  packetio.h  pnx_ip.h  pnx_socket.h  pnx_tcp.h  pnx_tcp_const.h  pnx_tcp_discard.h  pnx_tcp_tcb.h  pnx_utils.h  ringbuffer.h  routing.h  tcp_segment.h  utils.h
tests/: CMakeLists.txt  lab1.c  lab1.cc  lab2-cp4.cc  lab2.cc  logger_test.cc  ringbuffer_test.cc
vnetUtils/examples/: example.txt  lab2-cp-5-topo.txt  makeVNet  removeVNet
vnetUtils/helper/: addNS  addVethPair  bypassKernel  connectNS  delNS  delVeth  enableForward  execNS  giveAddr  setGRoute  setNS  setRoute  undoBypass  vdo
